// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Keywords should render Keywords: input 1`] = `
Array [
  <div
    className="components-form-token-field"
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    tabIndex="-1"
  >
    <label
      className="components-form-token-field__label"
      htmlFor="components-form-token-input-0"
    >
      Set Search Keywords
    </label>
    <div
      className="components-form-token-field__input-container"
      onMouseDown={[Function]}
      onTouchStart={[Function]}
      tabIndex="-1"
    >
      <span
        className="components-form-token-field__token"
      >
        <span
          className="components-form-token-field__token-text"
          id="components-form-token-field__token-text-0"
        >
          <span
            className="components-visually-hidden"
          >
            test (1 of 1)
          </span>
          <span
            aria-hidden="true"
          >
            test
          </span>
        </span>
        <ForwardRef(Button)
          aria-describedby="components-form-token-field__token-text-0"
          className="components-form-token-field__remove-token"
          icon="dismiss"
          label="Remove item"
          onClick={[Function]}
        >
          <button
            aria-describedby="components-form-token-field__token-text-0"
            aria-label="Remove item"
            className="components-button components-form-token-field__remove-token has-icon"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            type="button"
          >
            <svg
              aria-hidden="true"
              className="dashicon dashicons-dismiss"
              focusable="false"
              height={20}
              role="img"
              viewBox="0 0 20 20"
              width={20}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 2c4.42 0 8 3.58 8 8s-3.58 8-8 8-8-3.58-8-8 3.58-8 8-8zm5 11l-3-3 3-3-2-2-3 3-3-3-2 2 3 3-3 3 2 2 3-3 3 3z"
              />
            </svg>
          </button>
        </ForwardRef(Button)>
      </span>
      <input
        aria-autocomplete="list"
        aria-describedby="components-form-token-suggestions-howto-0"
        aria-expanded={false}
        className="components-form-token-field__input"
        disabled={false}
        id="components-form-token-input-0"
        onBlur={[Function]}
        onChange={[Function]}
        role="combobox"
        size={1}
        type="text"
        value=""
      />
    </div>
    <p
      className="components-form-token-field__help"
      id="components-form-token-suggestions-howto-0"
    >
      Separate with commas or the Enter key.
    </p>
  </div>,
  Array [
    Array [
      "",
      <blockquote
        className="wp-block-quote test-block-edit"
      >
        <ForwardRef(RichTextWrapper)
          __unstableOnSplitMiddle={[Function]}
          identifier="value"
          multiline={true}
          onChange={[Function]}
          onRemove={[Function]}
          onSplit={[Function]}
          placeholder="Write quote…"
        >
          <ForwardRef
            __unstableDidAutomaticChange={false}
            __unstableInputRule={[Function]}
            __unstableIsCaretWithinFormattedText={false}
            __unstableIsSelected={false}
            __unstableMarkAutomaticChange={[Function]}
            __unstableMultilineTag="p"
            __unstableOnCreateUndoLevel={[Function]}
            __unstableOnEnterFormattedText={[Function]}
            __unstableOnExitFormattedText={[Function]}
            blockIsSelected={true}
            className="block-editor-rich-text__editable"
            disabled={false}
            identifier="value"
            onChange={[Function]}
            onDelete={[Function]}
            onEnter={[Function]}
            onPaste={[Function]}
            onSelectionChange={[Function]}
            placeholder="Write quote…"
          >
            Array [
              "",
              "",
              <div
                aria-activedescendant={null}
                aria-label="Write quote…"
                aria-multiline={true}
                aria-owns={null}
                className="rich-text block-editor-rich-text__editable"
                contentEditable={true}
                onBlur={[Function]}
                onCompositionEnd={[Function]}
                onCompositionStart={[Function]}
                onFocus={[Function]}
                onInput={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onPaste={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="textbox"
                style={
                  Object {
                    "whiteSpace": "pre-wrap",
                  }
                }
                suppressContentEditableWarning={true}
              />,
            ]
          </ForwardRef>
        </ForwardRef(RichTextWrapper)>
        <ForwardRef(RichTextWrapper)
          __unstableMobileNoFocusOnMount={true}
          className="wp-block-quote__citation"
          identifier="citation"
          onChange={[Function]}
          placeholder="Write citation…"
        >
          <ForwardRef
            __unstableDidAutomaticChange={false}
            __unstableInputRule={[Function]}
            __unstableIsCaretWithinFormattedText={false}
            __unstableIsSelected={false}
            __unstableMarkAutomaticChange={[Function]}
            __unstableMobileNoFocusOnMount={true}
            __unstableOnCreateUndoLevel={[Function]}
            __unstableOnEnterFormattedText={[Function]}
            __unstableOnExitFormattedText={[Function]}
            blockIsSelected={true}
            className="block-editor-rich-text__editable wp-block-quote__citation"
            disabled={false}
            identifier="citation"
            onChange={[Function]}
            onDelete={[Function]}
            onEnter={[Function]}
            onPaste={[Function]}
            onSelectionChange={[Function]}
            placeholder="Write citation…"
          >
            Array [
              "",
              "",
              <div
                aria-activedescendant={null}
                aria-label="Write citation…"
                aria-multiline={true}
                aria-owns={null}
                className="rich-text block-editor-rich-text__editable wp-block-quote__citation"
                contentEditable={true}
                onBlur={[Function]}
                onCompositionEnd={[Function]}
                onCompositionStart={[Function]}
                onFocus={[Function]}
                onInput={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onPaste={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="textbox"
                style={
                  Object {
                    "whiteSpace": "pre-wrap",
                  }
                }
                suppressContentEditableWarning={true}
              />,
            ]
          </ForwardRef>
        </ForwardRef(RichTextWrapper)>
      </blockquote>,
    ],
    "",
  ],
]
`;

exports[`Keywords should render Keywords: render 1`] = `
Array [
  <div
    className="components-form-token-field"
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    tabIndex="-1"
  >
    <label
      className="components-form-token-field__label"
      htmlFor="components-form-token-input-0"
    >
      Set Search Keywords
    </label>
    <div
      className="components-form-token-field__input-container"
      onMouseDown={[Function]}
      onTouchStart={[Function]}
      tabIndex="-1"
    >
      <input
        aria-autocomplete="list"
        aria-describedby="components-form-token-suggestions-howto-0"
        aria-expanded={false}
        className="components-form-token-field__input"
        disabled={false}
        id="components-form-token-input-0"
        onBlur={[Function]}
        onChange={[Function]}
        role="combobox"
        size={1}
        type="text"
        value=""
      />
    </div>
    <p
      className="components-form-token-field__help"
      id="components-form-token-suggestions-howto-0"
    >
      Separate with commas or the Enter key.
    </p>
  </div>,
  Array [
    Array [
      "",
      <blockquote
        className="wp-block-quote test-block-edit"
      >
        <ForwardRef(RichTextWrapper)
          __unstableOnSplitMiddle={[Function]}
          identifier="value"
          multiline={true}
          onChange={[Function]}
          onRemove={[Function]}
          onSplit={[Function]}
          placeholder="Write quote…"
        >
          <ForwardRef
            __unstableDidAutomaticChange={false}
            __unstableInputRule={[Function]}
            __unstableIsCaretWithinFormattedText={false}
            __unstableIsSelected={false}
            __unstableMarkAutomaticChange={[Function]}
            __unstableMultilineTag="p"
            __unstableOnCreateUndoLevel={[Function]}
            __unstableOnEnterFormattedText={[Function]}
            __unstableOnExitFormattedText={[Function]}
            blockIsSelected={true}
            className="block-editor-rich-text__editable"
            disabled={false}
            identifier="value"
            onChange={[Function]}
            onDelete={[Function]}
            onEnter={[Function]}
            onPaste={[Function]}
            onSelectionChange={[Function]}
            placeholder="Write quote…"
          >
            Array [
              "",
              "",
              <div
                aria-activedescendant={null}
                aria-label="Write quote…"
                aria-multiline={true}
                aria-owns={null}
                className="rich-text block-editor-rich-text__editable"
                contentEditable={true}
                onBlur={[Function]}
                onCompositionEnd={[Function]}
                onCompositionStart={[Function]}
                onFocus={[Function]}
                onInput={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onPaste={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="textbox"
                style={
                  Object {
                    "whiteSpace": "pre-wrap",
                  }
                }
                suppressContentEditableWarning={true}
              />,
            ]
          </ForwardRef>
        </ForwardRef(RichTextWrapper)>
        <ForwardRef(RichTextWrapper)
          __unstableMobileNoFocusOnMount={true}
          className="wp-block-quote__citation"
          identifier="citation"
          onChange={[Function]}
          placeholder="Write citation…"
        >
          <ForwardRef
            __unstableDidAutomaticChange={false}
            __unstableInputRule={[Function]}
            __unstableIsCaretWithinFormattedText={false}
            __unstableIsSelected={false}
            __unstableMarkAutomaticChange={[Function]}
            __unstableMobileNoFocusOnMount={true}
            __unstableOnCreateUndoLevel={[Function]}
            __unstableOnEnterFormattedText={[Function]}
            __unstableOnExitFormattedText={[Function]}
            blockIsSelected={true}
            className="block-editor-rich-text__editable wp-block-quote__citation"
            disabled={false}
            identifier="citation"
            onChange={[Function]}
            onDelete={[Function]}
            onEnter={[Function]}
            onPaste={[Function]}
            onSelectionChange={[Function]}
            placeholder="Write citation…"
          >
            Array [
              "",
              "",
              <div
                aria-activedescendant={null}
                aria-label="Write citation…"
                aria-multiline={true}
                aria-owns={null}
                className="rich-text block-editor-rich-text__editable wp-block-quote__citation"
                contentEditable={true}
                onBlur={[Function]}
                onCompositionEnd={[Function]}
                onCompositionStart={[Function]}
                onFocus={[Function]}
                onInput={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onPaste={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="textbox"
                style={
                  Object {
                    "whiteSpace": "pre-wrap",
                  }
                }
                suppressContentEditableWarning={true}
              />,
            ]
          </ForwardRef>
        </ForwardRef(RichTextWrapper)>
      </blockquote>,
    ],
    "",
  ],
]
`;
